--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
-  <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
+  <body class="ligth-theme" aria-label="O site está utilizando o tema light" role="body">
     <header aria-label="Cabeçalho da página.">
       <audio id="music" autoplay>
         <source src="assets/musics/normal-world.mpeg" aria-details="Audio do site" />
@@ -43,7 +43,7 @@
         </div>
 
         <img
-          class="invert-element"
+        class="invert-element"
           src="assets/images/content/inverted-world.png"
           alt="Image ilustrativa do Mundo Invertido"
         />
@@ -134,7 +134,10 @@
     
     <script type="module" src="assets/js/main.js"></script>
     <script>
-      
+              function switchTheme(){
+          document.body.classList.toggle('dark-theme');
+          document.body.classList.toggle('ligh-theme');
+        }
     </script>
   </body>
 </html>
